Add current location interface
